--- a/content/left_column.tex
+++ b/content/left_column.tex
@@ -1,3 +1,4 @@
+\vbox to \myposterheight{%
 %----------------------------------------------------------------------------------------
 %	OBJECTIVES
 %----------------------------------------------------------------------------------------
@@ -11,6 +12,7 @@
 	\end{enumerate}
 	
 \end{block}
+\vfill
 
 %----------------------------------------------------------------------------------------
 %	INTRODUCTION
@@ -25,7 +27,7 @@
 	\end{itemize}
 	
 \end{block}
-
+\vfill
 %----------------------------------------------------------------------------------------
 %	MATERIALS
 %----------------------------------------------------------------------------------------
@@ -65,7 +67,7 @@
 	\end{itemize}
 	
 \end{block}
-
+\vfill
 %----------------------------------------------------------------------------------------
 %	METHODS
 %----------------------------------------------------------------------------------------
@@ -94,7 +96,7 @@
 	\end{itemize}
 	
 \end{block}
-
+\vfill
 %----------------------------------------------------------------------------------------
 %	MATHEMATICAL SECTION
 %----------------------------------------------------------------------------------------
@@ -114,7 +116,7 @@
 	\end{itemize}
 	
 \end{block}
-
+\vfill
 %----------------------------------------------------------------------------------------
 %	ANOTHER MATHEMATICAL SECTION
 %----------------------------------------------------------------------------------------
@@ -134,5 +136,4 @@
 	\end{itemize}
 	
 \end{block}
-
-%----------------------------------------------------------------------------------------
+}%
