--- a/content/right_column.tex
+++ b/content/right_column.tex
@@ -1,3 +1,5 @@
+\vbox to \myposterheight{%
+	
 \begin{block}{Results: Table}
 	
 	\begin{itemize}
@@ -36,8 +38,8 @@
 	\end{table}
 	
 \end{block}
+\vfill
 
-%------------------------------------------------
 
 \begin{block}{Results: Figure}
 	
@@ -47,6 +49,7 @@
 	\end{figure}
 	
 \end{block}
+\vfill
 
 %----------------------------------------------------------------------------------------
 %	CONCLUSION
@@ -59,7 +62,7 @@
 		\item Quisque vestibulum, nisl sit amet gravida ultricies dis parturient montes, nascetur ridiculus musobortis commodo, eros dui consectetur mi.
 	\end{enumerate}
 \end{block}
-
+\vfill
 %----------------------------------------------------------------------------------------
 %	BILBIOGRAPHY
 %----------------------------------------------------------------------------------------
@@ -67,7 +70,7 @@
 \begin{block}{References}
 	\printbibliography
 \end{block}
-
+\vfill
 %----------------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
 %----------------------------------------------------------------------------------------
@@ -80,3 +83,4 @@
 	\end{itemize}
 	
 \end{block}
+}
