--- a/settings/package_declaration_settings.tex
+++ b/settings/package_declaration_settings.tex
@@ -36,6 +36,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{bm}
+\usepackage{mathdots} % mathfonts for vdots
 %\usefonttheme[onlymath]{serif} % uncomment for serif math equations
 
 % Figures
