First draft of the poster

--- a/content/title_def.tex
+++ b/content/title_def.tex
@@ -15,8 +15,8 @@
 % CASE1: SINGLE AUTHOR
 \author[short-author]{ % [short-author] is optional (used with \insertshortauthor)
 	\href{mailto:lucien.roquette@epfl.ch}{Lucien Roquette\inst{1}},
-	\href{mailto:mathieu.simeoni@epfl.ch}{Mathieu Simeoni\inst{1}}
-	\href{mailto:mathieu.simeoni@epfl.ch}{Paul Hurley\inst{1}}
+	\href{mailto:mathieu.simeoni@epfl.ch}{Mathieu Simeoni\inst{1}},
+	\href{mailto:mathieu.simeoni@epfl.ch}{Paul Hurley\inst{1}},
 	\href{mailto:adrien.besson@epfl.ch}{Adrien Besson\inst{2}}	
 }
 
