--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 %%% PACKAGES DECLARATION
 \input{settings/package_declaration_settings}
 \input{settings/own_package_settings}
+\input{tikz/tikz_settings}
 
 %%% COMMANDS %%%
 \input{settings/newcommands}
@@ -13,7 +14,7 @@
 \input{content/title_def}
 
 %%% BIBLIOGRAPHY %%%
-\addbibresource{example.bib}
+\addbibresource{EPFLIBM.bib}
 
 \begin{document}
 
