--- a/content/right_column.tex
+++ b/content/right_column.tex
@@ -1,53 +1,39 @@
 \vbox to \myposterheight{%
-	
-\begin{block}{Results: Table}
-	
+
+%----------------------------------------------------------------------------------------
+%	DECONVOLUTION
+%----------------------------------------------------------------------------------------
+\begin{block}{Deconvolution of ultrasound images}
 	\begin{itemize}
-		\item Ased Aliquet Luctus Lectus
+		\item The proposed model relates the low-resolution RF image with the high-resolution TRF 
+		\item It can be used for \textbf{deconvolution} \textit{i.e.} to retrieve the TRF from the DAS image 
+		\item Let us define the RF image $\vect{s} \in \mathbb{R}^{N_{\Omega}}$ and the unknown TRF $\vect{\gamma} \in \mathbb{R}^{N_{\Omega}}$ over the spatial grid $\Omega = \left\lbrace \ser{\vect{r}}{j}, j = 1, \dots, N_{\Omega}\right\rbrace$
+		\item The estimate of the TRF can be expressed from the RF image as:
+		\begin{equation*}
+			\vect{\gamma} \in \arg \min \limits_{\hat{\vect{\gamma}} \in \mathbb{R}^{N_{\Omega}}} \| \hat{\vect{\gamma}} \|_p \textnormal{ subject to } \| \mat{H} \hat{\vect{\gamma}} - \vect{s} \| \leq \epsilon
+		\end{equation*}
+		where $p \in \left]0, 2\right]$ and $\mat{H} \in \mathbb{R}^{N_{\Omega} \times N_{\Omega}}$ is defined by:
+		\begin{equation*}
+			H_{jk} = PSF \left(\ser{\vect{r}}{j}, \ser{\vect{r}}{k}\right), \; \forall \left(\ser{\vect{r}}{j}, \ser{\vect{r}}{k}\right) \in \Omega^2 
+		\end{equation*}
 	\end{itemize}
-	
-	\begin{table}
-		\begin{tabular}{l l l}
-			\toprule
-			\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-			\midrule
-			Treatment 1 & 0.0003262 & 0.562 \\
-			Treatment 2 & 0.0015681 & 0.910 \\
-			Treatment 3 & 0.0009271 & 0.296 \\
-			\bottomrule
-		\end{tabular}
-		\caption{Table caption}
-	\end{table}
-	
-	\begin{itemize}
-		\item Sollicitudin Vel Orci
-		\item Maecenas Ultricies Feugiat Velit Non Mattis.
-	\end{itemize}
-	
-	\begin{table}
-		\begin{tabular}{l l l}
-			\toprule
-			\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-			\midrule
-			Treatment 1 & 0.0003262 & 0.562 \\
-			Treatment 2 & 0.0015681 & 0.910 \\
-			Treatment 3 & 0.0009271 & 0.296 \\
-			\bottomrule
-		\end{tabular}
-		\caption{Table caption}
-	\end{table}
-	
 \end{block}
-\vfill
 
+%----------------------------------------------------------------------------------------
+%	EXPERIMENTS AND RESULTS
+%----------------------------------------------------------------------------------------
 
-\begin{block}{Results: Figure}
-	
-	\begin{figure}
-		\includegraphics[width=0.8\linewidth]{fig_ex1_subfig2.pdf}
-		\caption{Figure caption}
-	\end{figure}
-	
+\begin{block}{Experiments and results}
+	\begin{itemize}
+		\item Comparison with state-of-the-art deconvolution approaches which use spatially-invariant PSF~\cite{Chen2015}
+		\item Raw-data simulated on Field II:
+		\begin{itemize}
+			\item 64-elements phased-array
+			\item Central frequency $f_c$ = \SI{2.5}{\mega\hertz}, bandwidth of \SI{80}{\percent} 
+			\item Sampling frequency $f_s$ = 
+		\end{itemize}
+		\item Standard DAS algorithm used to obtain the RF image
+	\end{itemize}
 \end{block}
 \vfill
 
@@ -56,15 +42,12 @@
 %----------------------------------------------------------------------------------------
 
 \begin{block}{Conclusion}
-	\begin{enumerate}
-		\item Donec fringilla, velit id lobortis commodo, eros dui consectetur mi, ut interdum lorem dui sed mauris.
-		\item Nulla ac nulla rhoncus est bibendum ullamcorper:
-		\item Quisque vestibulum, nisl sit amet gravida ultricies dis parturient montes, nascetur ridiculus musobortis commodo, eros dui consectetur mi.
-	\end{enumerate}
+	
 \end{block}
 \vfill
+
 %----------------------------------------------------------------------------------------
-%	BILBIOGRAPHY
+%	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
 \begin{block}{References}
