--- a/settings/newcommands.tex
+++ b/settings/newcommands.tex
@@ -53,3 +53,10 @@
 	\usebox{\titlebox}
 }
 
+% *** USEFUL COMMANDS ***
+\newcommand{\ie}{\textit{i.e.}}
+\newcommand{\etal}{\textit{et al.}}
+\newcommand{\vect}[1]{\bm{#1}}
+\newcommand{\ser}[2]{#1^#2}
+\newcommand{\mat}[1]{\mathsf{#1}}
+\DeclareMathOperator{\R}{\mathbb{R}}
