Add first draft of the right column

--- a/EPFLIBM.bib
+++ b/EPFLIBM.bib
@@ -16,3 +16,13 @@ title = {{Compressive deconvolution in medical ultrasound imaging}},
 volume = {35},
 year = {2016}
 }
+@article{Boyd2010,
+author = {Boyd, Stephen},
+journal = {Found. Trends Mach. Learn.},
+month= {jan},
+number = {1},
+pages = {1--122},
+title = {Distributed Optimization and Statistical Learning via the Alternating Direction Method of Multipliers},
+volume = {3},
+year = {2011},
+}
