--- a/content/left_column.tex
+++ b/content/left_column.tex
@@ -5,11 +5,12 @@
 
 \begin{block}{Introduction and objectives}
 	
-	\begin{enumerate}
-		\item Donec fringilla, velit id lobortis commodo, eros dui consectetur mi, ut interdum lorem dui sed mauris.
-		\item Nulla ac nulla rhoncus est bibendum ullamcorper:
-		\item Quisque vestibulum, nisl sit amet gravida ultricies dis parturient montes, nascetur ridiculus musobortis commodo, eros dui consectetur mi.
-	\end{enumerate}
+	\begin{itemize}
+		\item The point spread function (PSF), \ie the response of a system to a point source, is a measure of the quality of an ultrasound imager.
+		\item PSF usually either crudely estimated by assuming spatial-invariance, or estimated via simulation, coupled with reconstruction algorithms, such as delay-and-sum (DAS). 
+		\item Lack of an analytical formulation inhibits many applications ranging from optimization of apodization schemes, to array-design to and deconvolution algorithms
+		\item Based on the pulse-echo-impulse response model, we propose \textbf{an analytical formulation of the PSF}
+	\end{itemize}
 	
 \end{block}
 \vfill
