--- a/content/right_column.tex
+++ b/content/right_column.tex
@@ -34,7 +34,7 @@
 			\item Sampling frequency $f_s$ = 
 		\end{itemize}
 		\item Standard DAS algorithm used to obtain the RF image
-		\item Problem~\eqref{eq_deconv_pb} solved with Alternating direction method of multipliers~(ADMM)~\cite{Boyd2010} with $p=1$, $\epsilon = $ and \num{1500} iterations
+		\item Problem~\eqref{eq_deconv_pb} solved with Alternating direction method of multipliers~(ADMM)~\cite{Boyd2010} with $p=1$
 	\end{itemize}
 \end{block}
 \vfill
