--- a/content/right_column.tex
+++ b/content/right_column.tex
@@ -69,7 +69,15 @@
 %----------------------------------------------------------------------------------------
 
 \begin{block}{Conclusion}
-	
+	\begin{itemize}
+		\item An analytical formulation of the point-spread function is proposed and validated against simulated images. The proposed operator is grid-independent and compatible with any transmit scheme and apodization
+		\item The proposed operator is used for deconvolution of ultrasound images and exhibits better results than standard approaches
+		\item Perspectives:
+		\begin{itemize}
+			\item Validation on \textit{in-vitro} and \textit{in-vivo} data
+			\item Presentation at IEEE International Ultrasound Symposium 2017
+		\end{itemize}
+	\end{itemize}
 \end{block}
 \vfill
 
