--- a/content/left_column.tex
+++ b/content/left_column.tex
@@ -6,8 +6,8 @@
 \begin{block}{Introduction and objectives}
 	
 	\begin{itemize}
-		\item The point spread function (PSF), \ie the response of a system to a point source, is a measure of the quality of an ultrasound imager.
-		\item PSF usually either crudely estimated by assuming spatial-invariance, or estimated via simulation, coupled with reconstruction algorithms, such as delay-and-sum (DAS). 
+		\item The point spread function (PSF), \ie the response of a system to a point source, is a measure of the quality of an ultrasound imager
+		\item PSF usuallycrudely estimated by assuming spatial-invariance, or estimated via simulation, coupled with reconstruction algorithms 
 		\item Lack of an analytical formulation inhibits many applications ranging from optimization of apodization schemes, to array-design to and deconvolution algorithms
 		\item Based on the pulse-echo-impulse response model, we propose \textbf{an analytical formulation of the PSF}
 	\end{itemize}
@@ -51,7 +51,7 @@
 		\begin{equation}
 			m \left(\vect{r}_i, t\right) = \int \limits_{\Omega} b \left(\vect{r}', \vect{r}_i\right) h \left(t - \tau \left(\vect{r}', \vect{r}_i\right)\right) \gamma \left(\vect{r}'\right) d \vect{r}'
 		\end{equation}
-		where $\tau \left(\vect{r}', \vect{r}_i\right) = t_{TX} \left(\vect{r}\right) + \frac{\| \vect{r} - \vect{r}_i \|_2}{c}$ is the round trip time-of-flight of the US wave 
+		where $\tau \left(\vect{r}', \vect{r}_i\right) = t_{TX} \left(\vect{r}'\right) + \frac{\| \vect{r}' - \vect{r}_i \|_2}{c}$ is the round trip time-of-flight of the US wave 
 	\end{itemize}
 	
 \end{block}
@@ -70,7 +70,8 @@
 			&= \int \limits_{\Omega} \left[\sum \limits_{i=1}^{N_{el}} w_i h \left(\tau \left(\vect{r}, \vect{r}_i\right) - \tau \left(\vect{r}', \vect{r}_i\right) \right)\right] \gamma\left(\vect{r}'\right) d \vect{r}'
 		\end{align}
 		where $b \left(\vect{r}', \vect{r}_i\right) = 1$
-		\item One may deduce from Equation~\eqref{eq_DAS_estimate} \textbf{the kernel of the PSF}:
+		\item One may deduce from Equation~\eqref{eq_DAS_estimate} 
+		the kernel of the PSF:
 		\begin{equation}
 			\label{eq_PSF_estimate}
 			PSF \left(\vect{r}, \vect{r}'\right) = \sum \limits_{i=1}^{N_{el}} w_i h \left(\tau \left(\vect{r}, \vect{r}_i\right) - \tau \left(\vect{r}', \vect{r}_i\right) \right), \; \forall \left(\vect{r}, \vect{r}'\right) \in \Omega^2
@@ -91,11 +92,7 @@
 
 \begin{block}{Validation of the proposed model}
 	\begin{itemize}
-		\item Two phantoms are simulated: 
-		\begin{enumerate}
-			\item Point-scatterers phantom
-			\item Cyst phantom
-		\end{enumerate}
+		\item Point-scatterers and cyst phantoms are simulated: 
 		\item The PSF model described in Equation~\eqref{eq_PSF_estimate} is generated with the following settings:
 		\begin{itemize}
 			\item The weights $w_i$ are set to 1
@@ -110,11 +107,10 @@
 	\newlength{\CIRSFigWidth} \setlength{\CIRSFigWidth}{0.48\textwidth}
 	\newlength{\CIRSFigHeight}
 	\settoheight{\CIRSFigHeight}{\includegraphics[width=\CIRSFigWidth]{figures/Cyst_pht1.png}}
-	\newlength{\pointFigWidth} \setlength{\CIRSFigWidth}{0.48\textwidth}
+	\newlength{\pointFigWidth} \setlength{\CIRSFigWidth}{0.4\textwidth}
 	\newlength{\pointFigHeight}
 	\settoheight{\pointFigHeight}{\includegraphics[width=\CIRSFigWidth]{figures/Image_IUS_2017_1.jpg}}
 	\begin{figure}
-		\centering
 		% Maximum length
 %		\subcaptionbox{Reference }{\includegraphics[height=\pointFigHeight]{figures/Image_IUS_2017_1.jpg}}
 %		\hfill%
@@ -122,6 +118,7 @@
 		\subcaptionbox{Field II simulation }{\includegraphics[height=\CIRSFigHeight]{figures/Cyst_pht1.png}}
 		\hfill%
 		\subcaptionbox{PSF model }{\includegraphics[height=\CIRSFigHeight]{figures/Cyst_pht2.png}}
+		\hfill%
 		\caption{B-mode image reconstructed from (a) Field II simulation and (b) the proposed PSF model.}
 	\end{figure}
 \end{block}
