Update the title

--- a/content/title_def.tex
+++ b/content/title_def.tex
@@ -14,13 +14,13 @@
 
 % CASE1: SINGLE AUTHOR
 \author[short-author]{ % [short-author] is optional (used with \insertshortauthor)
-	\href{mailto:lucien.roquette@epfl.ch}{Lucien Roquette\inst{1}},
-	\href{mailto:mathieu.simeoni@epfl.ch}{Mathieu Simeoni\inst{1}},
-	\href{mailto:mathieu.simeoni@epfl.ch}{Paul Hurley\inst{1}},
-	\href{mailto:adrien.besson@epfl.ch}{Adrien Besson\inst{2}}	
+	\href{mailto:lucien.roquette@epfl.ch}{Lucien Roquette\inst{\dagger}},
+	\href{mailto:mathieu.simeoni@epfl.ch}{Mathieu Simeoni\inst{\dagger}},
+	\href{mailto:mathieu.simeoni@epfl.ch}{Paul Hurley\inst{\dagger}},
+	\href{mailto:adrien.besson@epfl.ch}{Adrien Besson\inst{\star}}	
 }
 
 \institute{
-	\inst{1}IBM Zurich Research Laboratory, Rüschlikon \\
-	\href{http://lts5www.epfl.ch}{\inst{2}Signal Processing Laboratory (LTS5)}, \href{http://www.epfl.ch/index.en.html}{\'Ecole Polytechnique F\'ed\'erale de Lausanne}
+	\inst{\dagger}IBM Zurich Research Laboratory, Rüschlikon \\
+	\href{http://lts5www.epfl.ch}{\inst{\star}Signal Processing Laboratory (LTS5)}, \href{http://www.epfl.ch/index.en.html}{\'Ecole Polytechnique F\'ed\'erale de Lausanne, Lausanne}
 }
