--- a/settings/newcommands.tex
+++ b/settings/newcommands.tex
@@ -19,9 +19,9 @@
 
 %%% CUSTOM MAKETITLE COMMAND %%%
 \newlength{\LogoWidthLeft}
-\settowidth{\LogoWidthLeft}{\includegraphics[height=\LogoHeight]{logos/lts5_logo.pdf}}
+\settowidth{\LogoWidthLeft}{\includegraphics[height=\LogoHeight]{logos/epfl_logo.pdf}}
 \newlength{\LogoWidthRight}
-\settowidth{\LogoWidthRight}{\includegraphics[height=\LogoHeight]{logos/epfl_logo.pdf}}
+\settowidth{\LogoWidthRight}{\includegraphics[height=\LogoHeight]{logos/IBM_logo.pdf}}
 \setlength{\titlewidth}{\LeftColumnWidth + \RightColumnWidth + \BlankColumnWidthCenter- \LogoWidthLeft - \LogoWidthRight - \BlankColumnWidthLeft-\BlankColumnWidthRight}
 \newsavebox{\titlebox}
 \newlength{\myposterheight}
@@ -29,10 +29,7 @@
 	\savebox{\titlebox}{%
 		\hspace{\BlankColumnWidthLeft}
 		\begin{minipage}{\LogoWidthLeft}%
-			\includegraphics[height=\LogoHeight]{logos/basp_logo.png}
-			\vspace{\LogoSkip}
-			\centering
-			\includegraphics[height=\LogoHeight]{logos/lts5_logo.pdf}
+			\includegraphics[height=\LogoHeight]{logos/epfl_logo.pdf}
 		\end{minipage} 
 		\begin{minipage}{\titlewidth}%
 			\centering
@@ -41,10 +38,10 @@
 			\small\insertinstitute %
 		\end{minipage} 
 		\begin{minipage}{\LogoWidthRight}%
-			\includegraphics[height=\LogoHeight]{logos/epfl_logo.pdf}
+			
 			\vspace{\LogoSkip}
 			\centering
-			\includegraphics[height=\LogoHeight]{logos/lts5_logo.pdf}
+			\includegraphics[height=\LogoHeight]{logos/IBM_logo.pdf}
 		\end{minipage}
 		\hspace{\BlankColumnWidthRight}
 	}%
