Correct a typo in the tikz

--- a/tikz/tikz_notations_scheme.tex
+++ b/tikz/tikz_notations_scheme.tex
@@ -151,7 +151,7 @@ measurement/.style = {decorate, decoration=snake, color=measurement-color, thick
 %
 %	
 % Receive time for flight
-\draw[->, wavefront-color] (scatterer_point) -- node[midway, sloped, below] {$\frac{\vect{r}-\vect{r}_i}{c}$} (td\transducerLabeled.south);
+\draw[->, wavefront-color] (scatterer_point) -- node[midway, sloped, below] {$\frac{\|\vect{r}-\vect{r}_i\|_2}{c}$} (td\transducerLabeled.south);
 %	
 %	% 1-D conic (ellipse)
 %	\coordinate (dw_ellipse_focus1) at (dw_virtual_point);
