Add the abbreviation US for ultrasound

--- a/content/left_column.tex
+++ b/content/left_column.tex
@@ -6,10 +6,10 @@
 \begin{block}{Introduction and objectives}
 	
 	\begin{itemize}
-		\item The point spread function (PSF), \ie the response of a system to a point source, is a measure of the quality of an ultrasound imager
+		\item The point spread function (PSF), \ie the response of a system to a point source, is a measure of the quality of an ultrasound~(US) imager
 		\item PSF usuallycrudely estimated by assuming spatial-invariance, or estimated via simulation, coupled with reconstruction algorithms 
 		\item Lack of an analytical formulation inhibits many applications ranging from optimization of apodization schemes, to array-design to and deconvolution algorithms
-		\item Based on the pulse-echo-impulse response model, we propose \textbf{an analytical formulation of the PSF}
+		\item We propose an analytical formulation of the PSF and use it for deconvolution of US images
 	\end{itemize}
 	
 \end{block}
