Remove the bold font for deconvolution

--- a/content/right_column.tex
+++ b/content/right_column.tex
@@ -6,7 +6,7 @@
 \begin{block}{Deconvolution of ultrasound images}
 	\begin{itemize}
 		\item The proposed model relates the low-resolution RF image with the high-resolution TRF 
-		\item It can be used for \textbf{deconvolution} \textit{i.e.} to retrieve the TRF from the DAS image 
+		\item It can be used for deconvolution \textit{i.e.} to retrieve the TRF from the DAS image 
 		\item Let us define the RF image $\vect{s} \in \mathbb{R}^{N_{\Omega}}$ and the unknown TRF $\vect{\gamma} \in \mathbb{R}^{N_{\Omega}}$ over the spatial grid $\Omega = \left\lbrace \ser{\vect{r}}{j}, j = 1, \dots, N_{\Omega}\right\rbrace$
 		\item The estimate of the TRF can be expressed from the RF image as:
 		\begin{equation}
