Correct two typos

--- a/content/right_column.tex
+++ b/content/right_column.tex
@@ -42,7 +42,7 @@
 %----------------------------------------------------------------------------------------
 %	RESULTS
 %----------------------------------------------------------------------------------------
-\begin{block}{Results: Point-scatterers and foetus phantoms}
+\begin{block}{Results: Point-reflectors and foetus phantoms}
 	\newlength{\PointFigWidth} \setlength{\PointFigWidth}{0.32\textwidth}
 	\newlength{\PointFigHeight}
 	\settoheight{\PointFigHeight}{\includegraphics[width=\PointFigWidth]{figures/RF_image.jpg}}
