--- a/content/left_column.tex
+++ b/content/left_column.tex
@@ -61,7 +61,7 @@
 %	PSF
 %----------------------------------------------------------------------------------------
 
-\begin{block}{Model of the point spread function}
+\begin{block}{Model of the point-spread-function}
 	\begin{itemize}
 		\item Delay-and-sum~(DAS) estimate~(also called RF image) of the TRF:
 		\begin{align}
@@ -92,7 +92,7 @@
 
 \begin{block}{Validation of the proposed model}
 	\begin{itemize}
-		\item Point-scatterers and cyst phantoms are simulated: 
+		\item A cyst phantom is simulated
 		\item The PSF model described in Equation~\eqref{eq_PSF_estimate} is generated with the following settings:
 		\begin{itemize}
 			\item The weights $w_i$ are set to 1
