--- a/content/left_column.tex
+++ b/content/left_column.tex
@@ -119,7 +119,7 @@
 		\hfill%
 		\subcaptionbox{PSF model }{\includegraphics[height=\CIRSFigHeight]{figures/Cyst_pht2.png}}
 		\hfill%
-		\caption{B-mode image reconstructed from (a) Field II simulation and (b) the proposed PSF model.}
+		\caption{B-mode image reconstructed from (a) Field II simulation and (b) the proposed PSF model}
 	\end{figure}
 \end{block}
 }%
