--- a/content/right_column.tex
+++ b/content/right_column.tex
@@ -6,7 +6,7 @@
 \begin{block}{Deconvolution of ultrasound images}
 	\begin{itemize}
 		\item The proposed model relates the low-resolution RF image with the high-resolution TRF 
-		\item It can be used for deconvolution \textit{i.e.} to retrieve the TRF from the DAS image 
+		\item It can be used for deconvolution \textit{i.e.} to retrieve the TRF from the RF image 
 		\item Let us define the RF image $\vect{s} \in \mathbb{R}^{N_{\Omega}}$ and the unknown TRF $\vect{\gamma} \in \mathbb{R}^{N_{\Omega}}$ over the spatial grid $\Omega = \left\lbrace \ser{\vect{r}}{j}, j = 1, \dots, N_{\Omega}\right\rbrace$
 		\item The estimate of the TRF can be expressed from the RF image as:
 		\begin{equation}
@@ -58,7 +58,7 @@
 		\subcaptionbox{ }{\includegraphics[height=\FoetusFigHeight]{figures/foetus_example.png}}
 		\subcaptionbox{ }{\includegraphics[height=\FoetusFigHeight]{figures/foetus_deconv_var.png}}
 		\subcaptionbox{ }{\includegraphics[height=\FoetusFigHeight]{figures/foetus_deconv_cst.png}}
-		\caption{(a) RF image of the point-reflectors phantom; (b) Deconvolved image with the proposed operator; (c) Deconvolved image with spatially invariant PSF; (d) RF image of the foetus phantom; (e) Deconvolved image with the proposed operator; (f) Deconvolved image with spatially invariant PSF.}
+		\caption{(a) RF image of the point-reflectors phantom; (b) Deconvolved image with the proposed operator; (c) Deconvolved image with spatially invariant PSF; (d) RF image of the foetus phantom; (e) Deconvolved image with the proposed operator; (f) Deconvolved image with spatially invariant PSF}
 	\end{figure}
 
 \end{block}
