--- a/content/right_column.tex
+++ b/content/right_column.tex
@@ -11,11 +11,11 @@
 		\item The estimate of the TRF can be expressed from the RF image as:
 		\begin{equation}
 			\label{eq_deconv_pb}
-			\vect{\gamma} \in \arg \min \limits_{\hat{\vect{\gamma}} \in \mathbb{R}^{N_{\Omega}}} \| \hat{\vect{\gamma}} \|_p \textnormal{ subject to } \| \mat{H} \hat{\vect{\gamma}} - \vect{s} \| \leq \epsilon
+			\vect{\gamma} \in \arg \min \limits_{\hat{\vect{\gamma}} \in \mathbb{R}^{N_{\Omega}}} \| \hat{\vect{\gamma}} \|_p \textnormal{ subject to } \| \mat{H} \hat{\vect{\gamma}} - \vect{s} \|_2 \leq \epsilon
 		\end{equation}
 		where $p \in \left]0, 2\right]$ and $\mat{H} \in \mathbb{R}^{N_{\Omega} \times N_{\Omega}}$ is defined by:
 		\begin{equation*}
-			H_{jk} = PSF \left(\ser{\vect{r}}{j}, \ser{\vect{r}}{k}\right), \; \forall \left(\ser{\vect{r}}{j}, \ser{\vect{r}}{k}\right) \in \Omega^2 
+			 \mat{H}_{jk} = PSF \left(\ser{\vect{r}}{j}, \ser{\vect{r}}{k}\right), \; \forall \left(\ser{\vect{r}}{j}, \ser{\vect{r}}{k}\right) \in \Omega^2 
 		\end{equation*}
 	\end{itemize}
 \end{block}
@@ -31,10 +31,10 @@
 		\begin{itemize}
 			\item 64-elements phased-array
 			\item Central frequency $f_c$ = \SI{2.5}{\mega\hertz}, bandwidth of \SI{80}{\percent} 
-			\item Sampling frequency $f_s$ = 
+			\item Sampling frequency $f_s$ = \SI{10}{\mega\hertz}
 		\end{itemize}
 		\item Standard DAS algorithm used to obtain the RF image
-		\item Problem~\eqref{eq_deconv_pb} solved with Alternating direction method of multipliers~(ADMM)~\cite{Boyd2010} with $p=1$
+		\item Problem~\eqref{eq_deconv_pb} solved for $p=1$ with alternating direction method of multipliers~\cite{Boyd2010}
 	\end{itemize}
 \end{block}
 \vfill
