--- a/tikz/tikz_notations_scheme.tex
+++ b/tikz/tikz_notations_scheme.tex
@@ -58,7 +58,7 @@ measurement/.style = {decorate, decoration=snake, color=measurement-color, thick
 	% Measurement label
 	%		\draw[] (\tdPosX, \transducerHeight) -- node[midway, sloped, below]{$m_i\left(t\right)$} (\tdPosX, {\tStart+\transducerHeight});
 	\ifdefstrequal{\pt}{\transducerLabeled}{%
-		\fill[color=measurement-color] (\tdPosX, {\tStart+\transducerHeight}) circle[radius=0] node[below left]{\rotatebox{90}{$m_i\left(t\right)$}};
+		\fill[color=measurement-color] (\tdPosX, {\tStart+\transducerHeight}) circle[radius=0] node[below left]{\rotatebox{90}{$m\left(\vect{r}_i, t\right)$}};
 		% COULD USE \path without option for an invisible path
 	}{}
 	
