Add a first draft of Matthieu's reviews

--- a/EPFLIBM.bib
+++ b/EPFLIBM.bib
@@ -26,3 +26,10 @@ title = {Distributed Optimization and Statistical Learning via the Alternating D
 volume = {3},
 year = {2011},
 }
+@inproceedings{Roquette_IUS_2017,
+author = {Roquette, Lucien and Simeoni, Matthieu and Hurley, Paul and Besson, Adrien},
+booktitle = {IEEE Int. Ultrason. Symp.},
+title = {{On an analytical, spatially-varying, point-spread-function for ultrasound imaging}},
+pubstate = {Forthcoming},
+year = {2017}
+}
