--- a/content/title_def.tex
+++ b/content/title_def.tex
@@ -10,17 +10,18 @@
 
 
 %%%%%%%%%%%%%% TITLE PAGE
-\title[EPFLIBM]{On an analytical, spatially-varying, point-spread-function for ultrasound imaging}
+\title[EPFLIBM]{On an analytical, spatially-varying, point-spread-function \\ for ultrasound imaging}
 
 % CASE1: SINGLE AUTHOR
 \author[short-author]{ % [short-author] is optional (used with \insertshortauthor)
 	\href{mailto:lucien.roquette@epfl.ch}{Lucien Roquette\inst{\dagger}},
-	\href{mailto:mathieu.simeoni@epfl.ch}{Mathieu Simeoni\inst{\dagger}},
+	\href{mailto:matthieu.simeoni@epfl.ch}{Matthieu Simeoni\inst{\dagger}\inst{\ast}},
 	\href{mailto:mathieu.simeoni@epfl.ch}{Paul Hurley\inst{\dagger}},
 	\href{mailto:adrien.besson@epfl.ch}{Adrien Besson\inst{\star}}	
 }
 
 \institute{
 	\inst{\dagger}IBM Zurich Research Laboratory, Rüschlikon \\
+	\inst{\ast}Audiovisual Communications Laboratory (LCAV), École Polytechnique Fédérale de Lausanne (EPFL), Lausanne \\
 	\href{http://lts5www.epfl.ch}{\inst{\star}Signal Processing Laboratory (LTS5)}, \href{http://www.epfl.ch/index.en.html}{\'Ecole Polytechnique F\'ed\'erale de Lausanne, Lausanne}
 }
