--- a/tikz/tikz_notations_scheme.tex
+++ b/tikz/tikz_notations_scheme.tex
@@ -20,9 +20,9 @@ measurement/.style = {decorate, decoration=snake, color=measurement-color, thick
 \pgfmathsetmacro{\scatPointZ}{6.2}
 
 % http://tex.stackexchange.com/questions/3594/tikz-node-labels-more-below-than-below#3596
-%	\node[fill, shape=circle, minimum size=0.1cm, inner sep=0cm, outer sep=0cm, color=scatterer-color, label=below:\textcolor{scatterer-color}{$\left(\vect{r}, \gamma\left(\vect{r}\right)\right)$}] (scatterer_point) at (\scatPointX, -\scatPointZ) {}; % NOT exactly 0.1cm radius..., not exactly the correct "below" distance
+%	\node[fill, shape=circle, minimum size=0.1cm, inner sep=0cm, outer sep=0cm, color=scatterer-color, label=below:\textcolor{scatterer-color}{$\left(\vect{r}, \reflectivity\left(\vect{r}\right)\right)$}] (scatterer_point) at (\scatPointX, -\scatPointZ) {}; % NOT exactly 0.1cm radius..., not exactly the correct "below" distance
 \node[fill, shape=circle, minimum size=0.1cm, inner sep=0cm, outer sep=0cm, color=scatterer-color] (scatterer_point) at (\scatPointX, -\scatPointZ) {};
-\fill[color=scatterer-color] (scatterer_point) circle[radius=0.1] node[below]{$\left(\vect{r}, \gamma\left(\vect{r}\right)\right)$};
+\fill[color=scatterer-color] (scatterer_point) circle[radius=0.1] node[below]{$\left(\vect{r}, \reflectivity\left(\vect{r}\right)\right)$};
 
 % Measurements
 %	\pgfmathsetmacro{\pt}{7}
@@ -58,7 +58,7 @@ measurement/.style = {decorate, decoration=snake, color=measurement-color, thick
 	% Measurement label
 	%		\draw[] (\tdPosX, \transducerHeight) -- node[midway, sloped, below]{$m_i\left(t\right)$} (\tdPosX, {\tStart+\transducerHeight});
 	\ifdefstrequal{\pt}{\transducerLabeled}{%
-		\fill[color=measurement-color] (\tdPosX, {\tStart+\transducerHeight}) circle[radius=0] node[below left]{\rotatebox{90}{$m\left(\vect{r}_i, t\right)$}};
+		\fill[color=measurement-color] (\tdPosX, {\tStart+\transducerHeight}) circle[radius=0] node[below left]{\rotatebox{90}{$R\left(t, \vect{p}_i\right)$}};
 		% COULD USE \path without option for an invisible path
 	}{}
 	
@@ -67,7 +67,7 @@ measurement/.style = {decorate, decoration=snake, color=measurement-color, thick
 
 % Labels for transducer and measurement
 \pgfmathsetmacro{\tdPosX}{\transducerInitXPos+(\transducerLabeled-1)*\transducerXOffset}
-\node[above] at (td\transducerLabeled) {$\vect{r}_i$};
+\node[above] at (td\transducerLabeled) {$\vect{p}_i$};
 %	\node[above] at (\tdPosX, \measurementLength + \transducerHeight) {\rotatebox{90}{\textcolor{measurement-color}{$m_i\left(t\right)$}}};
 
 
@@ -151,7 +151,7 @@ measurement/.style = {decorate, decoration=snake, color=measurement-color, thick
 %
 %	
 % Receive time for flight
-\draw[->, wavefront-color] (scatterer_point) -- node[midway, sloped, below] {$\frac{\|\vect{r}-\vect{r}_i\|_2}{c}$} (td\transducerLabeled.south);
+\draw[->, wavefront-color] (scatterer_point) -- node[midway, sloped, below] {$\frac{\|\vect{r}-\vect{p}_i\|_2}{c}$} (td\transducerLabeled.south);
 %	
 %	% 1-D conic (ellipse)
 %	\coordinate (dw_ellipse_focus1) at (dw_virtual_point);
@@ -220,7 +220,7 @@ measurement/.style = {decorate, decoration=snake, color=measurement-color, thick
 %	%	Inter-element spacing
 %	\pgfmathsetmacro{\transducerDxiOne}{2}
 %	\pgfmathsetmacro{\transducerDxiTwo}{3}
-%	\draw[|-|, thin] ($ (td\transducerDxiOne.south) - (0, \spacingLabelOffset) $) -- node[below] {$\Delta \vect{r}_i$} ($ (td\transducerDxiTwo.south) - (0, \spacingLabelOffset) $);
+%	\draw[|-|, thin] ($ (td\transducerDxiOne.south) - (0, \spacingLabelOffset) $) -- node[below] {$\Delta \vect{p}_i$} ($ (td\transducerDxiTwo.south) - (0, \spacingLabelOffset) $);
 %	
 %	
 \end{tikzpicture}
