--- a/EPFLIBM.bib
+++ b/EPFLIBM.bib
@@ -29,7 +29,7 @@ year = {2011},
 @inproceedings{Roquette_IUS_2017,
 author = {Roquette, Lucien and Simeoni, Matthieu and Hurley, Paul and Besson, Adrien},
 booktitle = {IEEE Int. Ultrason. Symp.},
-title = {{On an analytical, spatially-varying, point-spread-function for ultrasound imaging}},
+title = {{On an analytical, spatially-varying, point-spread-function}},
 pubstate = {Forthcoming},
 year = {2017}
 }
