--- a/settings/newcommands.tex
+++ b/settings/newcommands.tex
@@ -57,3 +57,4 @@
 \newcommand{\ser}[2]{#1^#2}
 \newcommand{\mat}[1]{\mathsf{#1}}
 \DeclareMathOperator{\R}{\mathbb{R}}
+\newcommand{\reflectivity}{\chi}
